--- a/src/page/cards.pug
+++ b/src/page/cards.pug
@@ -2,6 +2,7 @@ extends ../layout/ui-kit.pug
 include ../components/date-wishes/date-wishes
 include ../components/total-card/total-card
 include ../components/date-picker/date-picker
+include ../components/register-card/register-card
 block variables
   - var title = "Карточки"
   - var pageClass = "cards-page"
@@ -16,3 +17,5 @@ block content
       .cards-page__item
         .card-page__stub-card
           +datePicker()
+      .cards-page__item
+        +registerCard()
