--- a/src/style/cards.scss
+++ b/src/style/cards.scss
@@ -4,10 +4,12 @@
 
 .cards-page__wrap {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: flex-start;
   padding: 70px 0;
+}
+
+.cards-page__item {
+  margin-bottom: 40px;
 }
 
 .card-page__stub-card {
@@ -23,3 +25,4 @@
 }
 
 @import "../components/total-card/total-card";
+@import "../components/register-card/register-card";
