--- a/src/style/cards.scss
+++ b/src/style/cards.scss
@@ -27,3 +27,4 @@
 
 @import "../components/total-card/total-card";
 @import "../components/register-card/register-card";
+@import "../components/auth-card/auth-card";
