--- a/src/style/cards.scss
+++ b/src/style/cards.scss
@@ -28,3 +28,4 @@
 @import "../components/total-card/total-card";
 @import "../components/register-card/register-card";
 @import "../components/auth-card/auth-card";
+@import "../components/hotel-card/hotel-card";
