добавил скрытие кнопок навигации слайдера

--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -1,6 +1,7 @@
 include ../ratebtn/ratebtn
 
 mixin hotelCard(options = {})
+  - var sliderBtnClass = options.isBtnSliderHide ? "hotel-card__slider-control  hotel-card__slider-control--hide" : "hotel-card__slider-control"
   section.hotel-card
     .hotel-card__wrap
       .hotel-card__slider
@@ -12,7 +13,7 @@ mixin hotelCard(options = {})
           button(type="button")
           button(type="button")
           button(type="button")
-        .hotel-card__slider-control
+        div(class=sliderBtnClass)
           button(type="button") Назад
           button(type="button") Вперед
       .hotel-card__info
