добавил вторую карточку отеля в cards

--- a/src/page/cards.pug
+++ b/src/page/cards.pug
@@ -38,4 +38,15 @@ block content
               { src: "../components/hotel-card/one-hotel.png", alt: "Красивый отель" }
             ]
           })
+          +hotelCard({
+            numberHotel: 840,
+            isBtnSliderHide: true,
+            reviewCount: 65,
+            dayCost: "9 900",
+            starCount: 4,
+            idRateBtn: "hotelRate",
+            images: [
+              { src: "../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
+            ]
+          })
       
