подключил стили rooms

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -72,6 +72,7 @@ body {
 
 @import "ui-kit.scss";
 @import "cards.scss";
+@import "rooms.scss";
 @import "../components/header/header";
 @import "../components/logo/logo";
 @import "../components/main-menu/main-menu";
