--- a/src/style/rooms.scss
+++ b/src/style/rooms.scss
@@ -1,3 +1,17 @@
 .rooms-page__wrap {
   display: flex;
 }
+
+.hotels__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 93%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.hotels__item {
+  margin-bottom: 10px;
+}
