добавил --mbs первому Item

--- a/src/page/rooms.pug
+++ b/src/page/rooms.pug
@@ -152,7 +152,7 @@ block content
     .rooms-page__wrap
       .filter
         .filter__wrap
-          .filter__item
+          div(class="filter__item  filter__item--mbs")
             +input({
               id: "number-guests-input",
               isFakeInput: true,
