--- a/src/style/rooms.scss
+++ b/src/style/rooms.scss
@@ -29,6 +29,10 @@
 
 .hotels__title {
   margin: 0;
+  margin-bottom: 21px;
+  font-size: 23px;
+  font-weight: bold;
+  line-height: 30px;
 }
 
 .hotels__list {
@@ -42,5 +46,5 @@
 }
 
 .hotels__item {
-  margin-bottom: 10px;
+  margin-bottom: 21px;
 }
