--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -2,7 +2,7 @@
   width: 270px;
   background: $mainColor;
   border-radius: 4px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 }
 
 .hotel-card__slider {
@@ -46,28 +46,43 @@
 
 .hotel-card__slider-control {
   position: absolute;
-  top: 69px;
+  top: 0;
   left: 0;
+  width: 100%;
+  border-radius: 5px 0 0 0;
 
   &--hide {
     display: none;
   }
+}
 
-  button {
+.hotel-card__slider-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 42px;
+  height: 152px;
+  font-size: 0;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 5px 0 0 0;
+
+  &::after {
     position: absolute;
-    top: 0;
+    top: 69px;
     left: 18px;
     width: 8px;
     height: 13px;
-    font-size: 0;
+    content: "";
     border: none;
     background: url("../components/hotel-card/expand-more.png") no-repeat;
   }
+}
 
-  button:nth-child(2) {
-    left: 240px;
-    transform: rotate(180deg);
-  }
+.hotel-card__slider-btn--next {
+  left: auto;
+  right: -1px;
+  border-radius: 0 0 0 5px;
+  transform: rotate(180deg);
 }
 
 .hotel-card__info {
