--- a/src/style/rooms.scss
+++ b/src/style/rooms.scss
@@ -1,3 +1,9 @@
+.rooms-page {
+  .pagination {
+    text-align: center;
+  }
+}
+
 .rooms-page__wrap {
   display: flex;
   padding: 30px 0;
@@ -41,6 +47,7 @@
   justify-content: space-between;
   width: 100%;
   margin: 0;
+  margin-bottom: 25px;
   padding: 0;
   list-style: none;
 }
