активировал дроп-даун в rooms

--- a/src/page/rooms.pug
+++ b/src/page/rooms.pug
@@ -206,6 +206,7 @@ block content
               placeholder: "2 спальни, 2 кровати...",
               isBigLabel: true
             })
+            div(class="drop-down-container" id="drop-down-container")
           .filter__item
             +checkbox({
               title: "Дополнительные удобства",
