--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -116,7 +116,7 @@
 .checkbox__descr {
   margin: 0;
   margin-top: 5px;
-  margin-left: 30px;
+  font-weight: normal;
   color: transparentize($contentColor, 0.5);
   font-size: 12px;
   line-height: 14px;
