передаю id кнопки и листа раскрывающегося checkboxа

--- a/src/page/rooms.pug
+++ b/src/page/rooms.pug
@@ -210,6 +210,8 @@ block content
           .filter__item
             +checkbox({
               title: "Дополнительные удобства",
+              idExpandableList: "checkbox-expandable-list",
+              idExpandableBtn: "checkbox-expandable-btn",
               isExpandable: true,
               isExpandableOpen: true,
               items: [
