описал блок с изображениями в room-details

--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -4,3 +4,12 @@ block variables
   - var title = "Toxin - подбери свой отель!"
   - var description = "Room details description"
   - var pageClass = "room-details"
+
+block content
+  .room-details__picture
+    img(width="981" height="486" src="../style/room-details-1.jpg", alt="Детали комнаты")
+    .room-details__picture-miniature
+      img(width="461" height="243" src="../style/room-details-2.jpg", alt="Детали комнаты")
+      img(width="461" height="243" src="../style/room-details-3.jpg", alt="Детали комнаты")
+  .container
+    h1 Привет из рум-деталис
