добавил в layout main тэг main

--- a/src/layout/main.pug
+++ b/src/layout/main.pug
@@ -12,5 +12,6 @@ html(lang="ru")
     title #{title}
   body(class=pageClass)
     +header()
-    block content
+    main
+      block content
     +footer({ isBorderTop: true })
