описал круговую диаграму с помощью Chart.js

--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -36,3 +36,7 @@ block content
               }
             ]
           })
+        section.room-details__impression
+          h2.room-details__title Впечатления от номера
+          .room-details__chart
+            canvas(id="doughnut-chart" width="120" height="120")
