у тайтла bullet-list добавил класс --lp

--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,7 +1,9 @@
 mixin bullet(options = {})
+  - const titleClass = options.isTitleLeftPadding ? "bullet__title  bullet__title--lp" : "bullet__title"
+
   .bullet
     if options.title
-     p.bullet__title= options.title
+     p(class=titleClass)= options.title
      ul.bullet__list
       each item in options.items
         li.bullet__item= item.label
