--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -7,6 +7,10 @@
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
+
+  &--lp {
+    padding-left: 20px;
+  }
 }
 
 .bullet__list {
