--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -14,6 +14,11 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  &:nth-child(3) {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
 }
 
 .features__pict {
