--- a/src/components/pie-chart/pie-chart.scss
+++ b/src/components/pie-chart/pie-chart.scss
@@ -9,14 +9,69 @@
 
 .pie-chart__vote {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 25px;
+  left: 29px;
   width: 64px;
+  font-size: 12px;
   text-align: center;
   color: $accentColor;
   text-transform: uppercase;
 
   b {
     font-size: 24px;
+    line-height: 30px;
+  }
+}
+
+.pie-chart {
+  display: flex;
+  align-items: flex-end;
+  width: 350px;
+}
+
+.pie-chart__label-list {
+  margin: 0;
+  margin-left: 30px;
+  padding: 0;
+  list-style: none;
+}
+
+.pie-chart__label-item {
+  position: relative;
+  margin-bottom: 8px;
+  padding-left: 15px;
+  font-size: 14px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &::before {
+    position: absolute;
+    top: 3px;
+    left: 0;
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+  }
+
+  &--yellow {
+    &::before {
+      background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+    }
+  }
+
+  &--green {
+    &::before {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+    }
+  }
+
+  &--purple {
+    &::before {
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    }
   }
 }
