--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -45,7 +45,7 @@ block content
             h2.room-details__title Впечатления от номера
             +pieChart()
         section.room-details__reviews
-          h2.room-details__title Отзывы посетителей номера #[span.room-details__title-alt 2 отзыва]
+          h2(class="room-details__title  room-details__title--low-mb") Отзывы посетителей номера #[span.room-details__title-alt 2 отзыва]
           +comment({
               authorName: "Мурад Сарафанов",
               datePost: "5 дней назад",
@@ -67,6 +67,7 @@ block content
         .room-details__column
           +bullet({
             title: "Правила",
+            isTitleLeftPadding: true,
             items: [
               { label: "Нельзя с питомцами" },
               { label: "Без вечеринок и мероприятий" },
