--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -11,11 +11,12 @@ block variables
   - var pageClass = "room-details"
 
 block content
-  .room-details__picture
-    img(width="981" height="486" src="../style/room-details-1.jpg", alt="Детали комнаты")
+  .room-details__picture 
+    .room-details__picture-big
+      img(src="../style/room-details-1.jpg", alt="Детали комнаты")
     .room-details__picture-miniature
-      img(width="461" height="243" src="../style/room-details-2.jpg", alt="Детали комнаты")
-      img(width="461" height="243" src="../style/room-details-3.jpg", alt="Детали комнаты")
+      img(src="../style/room-details-2.jpg", alt="Детали комнаты")
+      img(src="../style/room-details-3.jpg", alt="Детали комнаты")
   .container
     .room-details__wrap
       .room-details__content
