--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -64,6 +64,7 @@
   height: 152px;
   font-size: 0;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
+  border: none;
   border-radius: 5px 0 0 0;
 
   &::after {
