подключил стили registration.scss

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -74,6 +74,7 @@ body {
 @import "cards.scss";
 @import "rooms.scss";
 @import "room-details.scss";
+@import "registration.scss";
 @import "../components/header/header";
 @import "../components/logo/logo";
 @import "../components/main-menu/main-menu";
