--- a/src/page/registration.pug
+++ b/src/page/registration.pug
@@ -1,4 +1,5 @@
 extends ../layout/main.pug
+include ../components/register-card/register-card
 
 block variables
   - var title = "Toxin - регистрация!"
@@ -7,3 +8,5 @@ block variables
   
 block content
   .container
+    .registration-page__wrap
+      +registerCard()
