добавил фоновое изображения для main в registration

--- a/src/style/registration.scss
+++ b/src/style/registration.scss
@@ -1,3 +1,10 @@
+.registration-page {
+  main {
+    background: url("room-interior.jpg") no-repeat;
+    background-position: center -70px;
+  }
+}
+
 .registration-page__wrap {
   display: flex;
   justify-content: center;
