template main получает variable для включения/выключения бордюра у футера (по умолчанию false)

--- a/src/layout/main.pug
+++ b/src/layout/main.pug
@@ -14,4 +14,4 @@ html(lang="ru")
     +header()
     main
       block content
-    +footer({ isBorderTop: true })
+    +footer({ isBorderTop: !!footerBorderTop })
