добавил бордюр футеру для room-details и rooms

--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -9,6 +9,7 @@ block variables
   - var title = "Toxin - подбери свой отель!"
   - var description = "Room details description"
   - var pageClass = "room-details"
+  - var footerBorderTop = true
 
 block content
   .room-details__picture 
