--- a/src/page/rooms.pug
+++ b/src/page/rooms.pug
@@ -9,6 +9,7 @@ block variables
   - var title = "Toxin - подбери свой отель!"
   - var description = "Toxin description"
   - var pageClass = "rooms-page"
+  - var footerBorderTop = true
 
   -
     var hotels = [
