переименовал страницу sing в auth

--- a/src/page/auth.pug
+++ b/src/page/auth.pug
@@ -1,4 +1,5 @@
 extends ../layout/main.pug
+include ../components/auth-card/auth-card
 
 block variables
   - var title = "Toxin - авторизация!"
@@ -7,3 +8,4 @@ block variables
   
 block content
   .container
+    .auth-page__wrap
