подключил стили auth.scss

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -75,6 +75,7 @@ body {
 @import "rooms.scss";
 @import "room-details.scss";
 @import "registration.scss";
+@import "auth.scss";
 @import "../components/header/header";
 @import "../components/logo/logo";
 @import "../components/main-menu/main-menu";
