обновил тайтл у cards

--- a/src/page/cards.pug
+++ b/src/page/cards.pug
@@ -6,7 +6,7 @@ include ../components/register-card/register-card
 include ../components/auth-card/auth-card
 include ../components/hotel-card/hotel-card
 block variables
-  - var title = "Карточки"
+  - var title = "Toxin - карточки"
   - var pageClass = "cards-page"
 
 block content
