обновил тайтл у form-elements

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -13,7 +13,7 @@ include ../components/features/features
 include ../components/bullet-list/bullet-list
 include ../components/comment/comment
 block variables
-  - var title = "Элементы форм"
+  - var title = "Toxin - элементы форм"
   - var pageClass = "form-elements"
 
 block content
