обновил тайтл у index

--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -2,7 +2,7 @@ extends ../layout/main.pug
 include ../components/date-wishes/date-wishes
 
 block variables
-  - var title = "Toxin - подбери свой отель!"
+  - var title = "Toxin - главная!"
   - var description = "Toxin description"
   - var pageClass = "index-page"
   
