обновил тайтл у room-details

--- a/src/page/room-details.pug
+++ b/src/page/room-details.pug
@@ -6,7 +6,7 @@ include ../components/bullet-list/bullet-list
 include ../components/total-card/total-card
 
 block variables
-  - var title = "Toxin - подбери свой отель!"
+  - var title = "Toxin - детали комнаты!"
   - var description = "Room details description"
   - var pageClass = "room-details"
   - var footerBorderTop = true
